[gd_scene load_steps=9 format=3 uid="uid://bkhaq3b22wqrs"]

[ext_resource type="Script" path="res://Scenes/world.gd" id="1_mo6q1"]
[ext_resource type="Texture2D" uid="uid://5oqwp5xghemq" path="res://Assets/textures/background.png" id="1_w4qla"]
[ext_resource type="PackedScene" uid="uid://0g8v1s8ko2gh" path="res://Entities/Player/player.tscn" id="2_u2qy2"]
[ext_resource type="PackedScene" uid="uid://5sy0yqnflvmk" path="res://Entities/Ground/ground.tscn" id="3_v0od1"]
[ext_resource type="PackedScene" uid="uid://cqa7e4aoiane" path="res://Entities/Obstacle/obstacle_spawner.tscn" id="4_yvmr3"]
[ext_resource type="PackedScene" uid="uid://dvixao5q6fsnr" path="res://UI/hud.tscn" id="6_pujlt"]
[ext_resource type="PackedScene" uid="uid://5e71x8tm7aov" path="res://UI/menu.tscn" id="7_60bfw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sq03q"]
size = Vector2(480, 20)

[node name="World" type="Node2D"]
script = ExtResource("1_mo6q1")

[node name="Top" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(240, -10)
shape = SubResource("RectangleShape2D_sq03q")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_w4qla")
centered = false

[node name="ObstacleSpawner" parent="." instance=ExtResource("4_yvmr3")]
position = Vector2(600, 0)

[node name="Ground" parent="." instance=ExtResource("3_v0od1")]
position = Vector2(0, 687)

[node name="Player" parent="." instance=ExtResource("2_u2qy2")]
position = Vector2(115, 427)

[node name="HUD" parent="." instance=ExtResource("6_pujlt")]

[node name="Menu" parent="." instance=ExtResource("7_60bfw")]

[connection signal="hit" from="ObstacleSpawner" to="." method="_on_obstacle_spawner_hit"]
[connection signal="score" from="ObstacleSpawner" to="." method="_on_obstacle_spawner_score"]
[connection signal="body_entered" from="Ground/DeadZone" to="." method="_on_dead_zone_body_entered"]
[connection signal="start_game" from="Menu" to="." method="start"]

[editable path="Ground"]
